# lambdaV

./: .clang_complete  .gitignore  README.md  a.out  compiler.cpp  fwd.hpp  meson.build  notes.md  output.cpp  parser.cpp  parser.hpp  playground.lisp  spirv.hpp  test.lisp  test.spv
examples/: frag-coord.lv  playground.lv  test.lv  white.lv
report/: .gitignore  report.tex  test.tex
